Wed Aug 26 08:42:59 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: New packages with fixes for windows.

Mon Aug 24 16:02:34 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update branchpoint for windows
	  compilable tarballs.
	* xappy/fieldactions.py: Fix for document.fields being an iterator.

Mon Aug 24 12:16:23 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py,utils/make_xappy_tarballs: Updated tarballs -
	  should build for windows.

Fri Aug 21 12:17:29 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/colour.py: Add iter_buckets_rgb() to iterate through all
	  the buckets.  This can be used to generate a target palette for
	  quantization.

Fri Aug 21 09:00:41 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/colour.py: Some more utility functions for colour
	  conversion, to let us get back from a bucket or from lab coords
	  to an rgb value for display.

Fri Aug 21 07:46:32 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Update to get new packages.

Fri Aug 21 06:47:58 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/colour.py: import xapian-dependent stuff lazily, to make it
	  easier to use this module standalone.

Fri Aug 21 06:44:53 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* README: Note that scipy 0.7 or later is needed.
	* xappy/colour.py,xappy/unittests/colour.py: Fix off-by-one
	  error for buckets at the top end of the range.

Wed Aug 19 11:06:35 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Apply untested patch for wildcards.

Mon Aug 17 23:44:38 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* AUTHORS: Update license of majority of code to MIT (but note that
	  it's still effectively GPL for now).

Mon Aug 17 18:13:02 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
