@@ -45,21 +45,21 @@ except ImportError:
 #  - SHA1 sum of package
 archives = [
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-13351.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-13351a.tgz',
      'xapian-core.tgz',
-     '90ab87e99bced6d795bc822d5e22e220aa66cfed',
+     'e08f02f9a04ec5a585b5a6a6171ed725f6387481',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-13351.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-13351a.tgz',
      'xapian-bindings.tgz',
-     '44deabfd265e645afee58f52341b44aeb2e43276',
+     'e581889662ab49862adcd7768d3c8c398da8bce3',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-13351.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-13351a.tgz',
      'win32msvc.tgz',
-     '20282165b08d7470edc8e15ed493c444ca614ed2',
+     '723c35692116ccf221b3da8f63cb962bd0856e61',
      'xapian-core/win32',
     ),
     ('Xapian extras',
